# coloroflight.dev

./: .gitignore  CONTENT-LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/demos/: README.md  next.config.mjs  package.json  tsconfig.json
apps/demos/src/app/: layout.tsx  page.tsx
apps/demos/src/utils/: animation.ts
apps/home/: package-lock.json  package.json  tailwind.config.js  theme.config.jsx  tsconfig.json
apps/home/components/: ProjectCard.tsx  ProjectList.tsx
apps/home/modules/: font.ts
apps/home/pages/: index.mdx  projects.mdx
apps/home/pages/posts/: cleansweep-0.mdx  sienna-0.mdx
apps/home/styles/: global.css
apps/playground/: README.md  files.d.ts  next.config.js  package.json  tailwind.config.js  theme.config.jsx  tsconfig.json
apps/playground/hooks/: useEmscripten.tsx  useEmscriptenModule.ts
apps/playground/pages/: _app.mdx  _meta.json  index.mdx
apps/playground/pages/wasm/: _meta.json  cpp-dice-simulator.content.tsx  cpp-dice-simulator.mdx  dice-simulator.content.tsx  dice-simulator.mdx  image-flip.content.tsx  image-flip.mdx  image-flipper.content.tsx  image-flipper.mdx
apps/playground/public/emscripten/: module.js  module.wasm  simulate_dice_trials.d.ts  simulate_dice_trials.js
apps/playground/public/wasm/: simulate_dice_trials.wasm
apps/playground/types/: emscripten-custom.d.ts
apps/playground/wasm/: _types.ts  add-one.cpp  add.wasm  module.d.ts  module.js  module.wasm  moduleDice.js  moduleDice.wasm  simulate_dice_trials.cpp
archive/demos/: tsconfig.json
cpps/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpps/include/: image.h
cpps/src/: em_main.cpp  file.cpp  simulate_dice_trials.cpp
demos/: package-lock.json  package.json
demos/src/app/: layout.tsx  page.tsx
demos/src/app/first-webgpu-app/: page.tsx
demos/src/app/first-webgpu-app/hooks/: useGame.ts  useWebGPU.ts
demos/src/app/webgpu-conway/: page.tsx
demos/src/modules/: Navigation.tsx
demos/src/utils/: animation.ts
home/: package-lock.json  package.json  theme.config.jsx
home/pages/: _app.mdx  index.mdx
playground/: READMD.md
turborepo/: package.json
(+9 files in other folders)
